--- a/App.css
+++ b/App.css
@@ -4,12 +4,59 @@ body {
   margin: 0px;
 }
 
+#header {
+  width: 1000px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#header ul {
+  list-style-type: none;
+  top: 0px;
+  margin: 0px;
+  padding: 0px;
+}
+
+#header ul li {
+  float: left;
+}
+
+#header ul li a{
+  background-color: #CCCCCC;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  border: 1px solid #B3E8FF;
+}
+
+#header ul li a.activemenu {
+  background-color: #B3E8FF;
+  border: 1px solid #CCCCCC;
+  color: #00096A;
+  font-weight: bold;
+}
+
+#header ul li a:hover {
+  background: #B3E8FF;
+}
+
+#header p {
+  float: right;
+  color: #00096A;
+  font-weight: bold;
+}
+
 #App {
   width: 1000px;
   margin-top: 0px;
   margin-bottom: 0px;
   margin-left: auto;
   margin-right: auto;
+  clear: both;
 }
 
 .block {
